Add support for deploying to K8s and TP4K8s (#11)